syntax = "proto3";

package user;

option go_package = "./user_pb";

service UserService {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc Avtorization (AvtorizationRequest) returns (AvtorizationResponse);
}

message CreateAccountRequest {
    string user_name = 1;
    string last_name = 2;
    string email = 3;
}

message CreateAccountResponse {
    bool succes = 1;
}

message AvtorizationRequest {
    string user_name = 1;
    string last_name = 2;
    string email = 3;
}

message AvtorizationResponse {
    bool is_user_exists = 1;
    bool is_lact_name_is_correct = 2;
}